--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "prettier": "^2.8.0",
+    "sass": "^1.56.1",
     "vite": "^3.2.3"
   }
 }
